<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidApp</string>
    <string name="loginEditText">Login</string>
    <string name="passwordEditText">Password</string>
    <string name="signInButtonText">Sign in to Pivotal Tracker</string>
    <string name="initialSignInResultText"></string>
    <string name="progressSignInResultText">Contacting server...</string>
    <string name="successSignInResultText">Signed in with success!</string>
    <string name="errorSignInResultText">Error signing in!</string>
    <string name="locateMeButton">Locate Me!</string>
    <string name="locateMeProgressResultText">Looking up location...</string>
</resources>
