<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_gravity="right|center_vertical">
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginEditText"
                android:id="@+id/loginEditText" android:layout_gravity="center"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordEditText"
                android:id="@+id/passwordEditText" android:layout_gravity="center" android:inputType="textPassword"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signInButtonText"
                android:id="@+id/signInButton" android:layout_gravity="right|center_vertical" android:textStyle="bold"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:text="@string/initialSignInResultText"
                android:id="@+id/signInResultTextView" android:gravity="center" android:textStyle="bold"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locateMeButton"
                android:id="@+id/locateMeButton" android:layout_gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locateMeResultTextView" android:layout_gravity="center" android:text="..."/>
    </LinearLayout>
</LinearLayout>

